apply plugin: 'java'

repositories {
    mavenCentral()
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
    testCompile "junit:junit:4.12"
}

test {
  testLogging.showStandardStreams = true

  minHeapSize = "128m"
  maxHeapSize = "512m"

  jvmArgs '-XX:MaxPermSize=256m'

  beforeTest { descriptor ->
     logger.lifecycle("Running test: " + descriptor)
  }

  onOutput { descriptor, event ->
     logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
  }
}
